--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,7 +34,7 @@ jobs:
                 python-version: ${{ matrix.python-version }}
 
             - name: Install dependencies
-              run: python -m pip pytest .
+              run: python -m pip install pytest .
             
             - name: Run Tests
               run: pytest
