--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,7 +34,9 @@ jobs:
                 python-version: ${{ matrix.python-version }}
 
             - name: Install dependencies
-              run: python -m pip install pytest .
+              run: |
+                python -m pip install --upgrade pip
+                python -m pip install pytest
             
             - name: Run Tests
               run: pytest
