--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
               run: |
                 python -m pip install --upgrade pip
                 python -m pip install pytest
+                python -m pip install pandas
             
             - name: Run Tests
               run: pytest
